operator/pkg/gateway-api/testdata/gateway/gateway-multi-port-http/input/multi-port-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multi-port-http
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http-80
      protocol: HTTP
      port: 80
      hostname: "*.example.test"
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-8080
      protocol: HTTP
      port: 8080
      hostname: "*.example.test"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-80
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: multi-port-http
      sectionName: http-80
  hostnames:
    - api.example.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /web
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-8080
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: multi-port-http
      sectionName: http-8080
  hostnames:
    - api.example.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: infra-backend-v2
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-multi-port-http
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.200
        ipMode: VIP
